--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -488,7 +488,7 @@ body {
   display: none;
 }
 
-/* Slideshow container */
+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
 .slideshow-container {
   max-width: 1200px;
   position: relative;
