--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -51,7 +51,7 @@ body {
     display: none;
 }
 
-
+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
 /* Slideshow container */
 .slideshow-container {
     max-width: 1200px;
