--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,7 +2,7 @@
 @import "contacto";
 @import "productos";
 @import "footer";
-
+@import "slide";
 
 * {
     margin: 0;
@@ -37,89 +37,7 @@ body {
 
 
 
-/* inicio menú */
 
-.contenedor .carrusel {
-    grid-area: carrusel;
-    width: 100%;
-    background-image: url(../img/menu.jpg);
-    box-sizing: border-box;
-    z-index: -1;
-}
-
-.mySlides {
-    display: none;
-}
-
-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
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1200px;
-    position: relative;
-    margin: auto;
-}
-
-.mySlides img {
-    vertical-align: middle;
-    max-height: 400px;
-    border-radius: 0 0 30% 0;
-}
-
-.mySlides .name {
-    width: 100%;
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
-}
-
-/* slide text */
-.mySlides .text {
-    width: 40%;
-    margin-right: 50px;
-    font-size: 45px;
-    font-weight: bolder;
-    text-align: center;
-    margin-top: 10%;
-    background: linear-gradient(45deg, rgba(0, 61, 80, 1) 2%, rgba(0, 212, 255, 0.7455357142857143) 100%);
-    padding: 15px;
-    color: #fff;
-    border-radius: 0 0 0 40%;
-    text-shadow: 5px 2px 5px 0 #fff;
-}
-
-.text h4 {
-    color: #e97305;
-    font-size: 22px;
-    font-weight: lighter;
-}
-
-/* Fading animation */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: .5s;
-    animation-name: fade;
-    animation-duration: .5s;
-}
-
-@-webkit-keyframes fade {
-    from {
-        opacity: .7
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .7
-    }
-
-    to {
-        opacity: 1
-    }
-}
 
 .contenedor .section {
     height: auto;
