--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -1,10 +1,8 @@
 /* inicio menú */
 
-.contenedor .carrusel {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+.carrusel {
+    grid-column: 1/4;
+    grid-row: 1/2;
     width: 100%;
     background-image: url(../img/menu.jpg);
     box-sizing: border-box;
@@ -13,6 +11,47 @@
 
 .mySlides {
     display: none;
+    img {
+        vertical-align: middle;
+        max-height: 400px;
+        border-radius: 0 0 30% 0;
+    }
+
+    .name {
+        width: 100%;
+        position: absolute;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .text {
+
+        font: {
+            size: 45px;
+            weight: bolder;
+        }
+
+        text: {
+            align: center;
+            shadow: 5px 2px 5px 0 #fff;
+
+        }
+
+        width: 40%;
+        margin-right: 50px;
+        margin-top: 10%;
+        background: linear-gradient(45deg, rgba(0, 61, 80, 1) 2%, rgba(0, 212, 255, 0.7455357142857143) 100%);
+        padding: 15px;
+        color: #fff;
+        border-radius: 0 0 0 40%;
+        
+        h4 {
+            color: #e97305;
+            font-size: 22px;
+            font-weight: lighter;
+        }
+    }
+
 }
 
 /* Slideshow container */
@@ -22,39 +61,6 @@
     margin: auto;
 }
 
-.mySlides img {
-    vertical-align: middle;
-    max-height: 400px;
-    border-radius: 0 0 30% 0;
-}
-
-.mySlides .name {
-    width: 100%;
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
-}
-
-/* slide text */
-.mySlides .text {
-    width: 40%;
-    margin-right: 50px;
-    font-size: 45px;
-    font-weight: bolder;
-    text-align: center;
-    margin-top: 10%;
-    background: linear-gradient(45deg, rgba(0, 61, 80, 1) 2%, rgba(0, 212, 255, 0.7455357142857143) 100%);
-    padding: 15px;
-    color: #fff;
-    border-radius: 0 0 0 40%;
-    text-shadow: 5px 2px 5px 0 #fff;
-}
-
-.text h4 {
-    color: #e97305;
-    font-size: 22px;
-    font-weight: lighter;
-}
 
 /* Fading animation */
 .fade {
