--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -3,6 +3,7 @@
 @import "productos";
 @import "footer";
 @import "slide";
+@import "video";
 
 * {
     margin: 0;
@@ -23,22 +24,17 @@ body {
     grid-gap: 10px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(8, auto);
+    
+    .section {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        grid-column: 1/4;
+        grid-row: 5/6;
+    }
 
-       
-}
-
-.contenedor .section {
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 5;
-    grid-row-end: 6;
-}
-
-.contenedor .redes--uno,
-.contenedor .redes--dos {
+    .redes--uno,
+    .redes--dos {
     background: linear-gradient(45deg, #003d50 1%, rgba(0, 212, 255, 0.7455357142857143) 100%);
     height: 100px;
     text-align: center;
@@ -47,43 +43,60 @@ body {
     justify-content: center;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
     margin: 1px;
-}
+    }
 
-.contenedor .redes--uno {
-    grid-column: 1/3;
+    .redes--uno {
+        grid-column: 1/3;
+        grid-row: 3/4;
+
+        h4 {
+            font-size: 25px;
+            color: rgba(0, 212, 255, 0.7455357142857143);
+        }
+
+        p {
+            font-size: 16px;
+            font-weight: lighter;
+            color: #fff;
+            padding: 5px;
+        }
+    }
+
+    .redes--dos {
+        grid-column: 3/4;
+        grid-row: 3/4;
+
+        i {
+            font-size: 60px;
+            color: #e97305;
+            padding: 10px;
+
+            &:hover {
+                color: #fff;
+            }
+        
+        }
+    }
+
+    .article {
+
+        grid-column: 1/3;
+        grid-row: 6/7;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
     
-    grid-row: 3/4;
-    grid-row-end: 4;
+    }
+
+    .article2 {
+        grid-column: 3/4;
+        grid-row: 6/7;
+    }
+    
 
 }
 
-.redes--uno h4 {
-    font-size: 25px;
-    color: rgba(0, 212, 255, 0.7455357142857143);
-}
-
-.redes--uno p {
-    font-size: 16px;
-    font-weight: lighter;
-    color: #fff;
-    padding: 5px;
-}
-
-.contenedor .redes--dos {
-    grid-column: 3/4;
-    grid-row: 3/4;
- }
-
-.redes--dos i {
-    font-size: 60px;
-    color: #e97305;
-    padding: 10px;
-
-}
-
-.redes--dos i:hover {
-    color: #fff;
-}
 
 .form__titulo {
     margin-top: 4px;
@@ -97,75 +110,16 @@ body {
 }
 
 
-.contenedor .article {
 
-    grid-column: 1/3;
-    grid-row: 6/7;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-
-}
-
-.contenedor .article2 {
-    grid-column: 3/4;
-    grid-row: 6/7;
-}
-
-.box__video {
-    width: 23%;
-    border: 1px solid rgba(153, 153, 153, 0.288);
-    margin: 0 auto;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-}
-
-
-
-.box__video:hover i {
-    color: #e97305;
-}
-
-.box__video i {
-    font-size: 50px;
-    color: #003d50;
-    padding: 7px;
-}
-
-.box__video h4 {
-    font-size: 25px;
-    color: #003d50;
-    padding: 7px;
-
-}
-
-.box__video p {
-    font-size: 15px;
-    padding: 7px;
-
-}
 
 @media screen and (max-width: 992px) {
 
-    .contenedor {
-
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(10, auto);
-        grid-template-areas:
-            "carrusel carrusel "
-            "redes--uno redes--dos"
-            "section section "
-            "article article"
-            "article2 article2"
-            "contacto contacto"
-            "footer footer";
-    }
 
     .logo {
         width: 210px;
         height: 65px;
     }
+
     .menu {
         max-width: 760px;
     }
@@ -202,16 +156,12 @@ body {
     }
 
 
+
     .box__video {
         width: 24%;
         border: 1px solid rgba(153, 153, 153, 0.288);
     }
 
-    .contenedor .article2 {
-        grid-area: article2;
-        width: 100%;
-        height: 400px;
-    }
 
 }
 
@@ -220,397 +170,374 @@ body {
 
     .contenedor {
 
-        display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(28, auto);
-        grid-template-areas:
-        "carrusel  "
-        "redes--uno "
-        "redes--dos "
-        "section "
-        "section2  "
-        "article "
-        "article2  "
-        "contacto "
-        
-    }
-    /* inicio menú */
-
-
-    .logo {
-        width: 220px;
-        height: 70px;
-    }
-
-    .linkCompra {
-        font-size: 14px;
-    }
-
-    .mySlides .text {
-        margin-right: 30px;
-        font-size: 30px;
-        margin-top: 15%;
-    }
-
-    .text h4 {
-        font-size: 16px;
-    }
-
-    .redes--dos i {
-        font-size: 60px;
-        padding: 30px;
-    }
-
-
-    .box--productos {
-
-        float: left;
-        width: 40%;
-        height: 300px;
-        padding: 10px;
-
-    }
-
-    .middle {
-
-        opacity: 1;
-        position: static;
-        top: 0;
-        width: 100%;
-        left: 0;
 
+        .logo {
+            width: 220px;
+            height: 70px;
+        }
 
-    }
-
-    .box--productos:hover .middle {
-        display: none;
-    }
+        .linkCompra {
+            font-size: 14px;
+        }
 
-    .middle .text {
+        .mySlides .text {
+            margin-right: 30px;
+            font-size: 30px;
+            margin-top: 15%;
+        }
 
-        font-size: 15px;
-        color: white;
+        .text h4 {
+            font-size: 16px;
+        }
 
-    }
+        .redes--dos i {
+            font-size: 60px;
+            padding: 30px;
+        }
 
 
-    .box__accordion {
-        width: 50%;
-        height: 400px;
-    }
+        .box--productos {
 
+            float: left;
+            width: 40%;
+            height: 300px;
+            padding: 10px;
 
-    .box__video {
-        width: 24.3%;
-        border: 1px solid rgba(153, 153, 153, 0.288);
-    }
+        }
 
-    .box__video i {
-        font-size: 40px;
-    }
-    
-    .box__video h4 {
-        font-size: 22px;   
-    }
-    
-    .box__video p {
-        font-size: 13px;    
-    }
+        .middle {
+            opacity: 1;
+            position: static;
+            top: 0;
+            width: 100%;
+            left: 0;
+        }
 
-    .contenedor .article2 {
+        .box--productos:hover .middle {
+            display: none;
+        }
 
-        height: 300px;
-    }
+        .middle .text {
 
-    .contenedor .contacto {
-        display: flex;
-        flex-direction: column;
-    }
+            font-size: 15px;
+            color: white;
+        }
 
-    .contacto-form {
-        width: 100%;
+        .box__accordion {
+            width: 50%;
+            height: 400px;
+        }
 
-    }
 
-    .contacto--mapa {
-        width: 100%;
-        height: 300px;
-    }
+        .box__video {
+            width: 24.3%;
+            border: 1px solid rgba(153, 153, 153, 0.288);
+        }
 
+        .box__video i {
+            font-size: 40px;
+        }
 
-    .promo__img {
-        width: 22%;
-        padding: 0;
+        .box__video h4 {
+            font-size: 22px;
+        }
 
-    }
+        .box__video p {
+            font-size: 13px;
+        }
 
-    .promo__img img {
-        width: 70px;
-    }
+        .contenedor .article2 {
 
-    .promo__text {
-        width: 40%;
-    }
+            height: 300px;
+        }
 
-    .promo__text p {
-        padding: 15px;
-        font-size: 12px;
+        .contenedor .contacto {
+            display: flex;
+            flex-direction: column;
+        }
 
+        .contacto-form {
+            width: 100%;
 
-    }
+        }
 
-    .promo__redes {
-        width: 10%;
-    }
+        .contacto--mapa {
+            width: 100%;
+            height: 300px;
+        }
 
-    .promo__redes i {
-        color: #e97305;
-        font-size: 30px;
-        padding: 5px;
-        text-decoration: none;
-    }
 
-    .promo__contacto {
-        width: 25%;
-    }
+        .promo__img {
+            width: 22%;
+            padding: 0;
 
-    .promo__contacto i {
-        font-size: 45px;
-        padding: 5px;
-    }
+        }
+
+        .promo__img img {
+            width: 70px;
+        }
+
+        .promo__text {
+            width: 40%;
+        }
+
+        .promo__text p {
+            padding: 15px;
+            font-size: 12px;
+        }
+
+        .promo__redes {
+            width: 10%;
+        }
+
+        .promo__redes i {
+            color: #e97305;
+            font-size: 30px;
+            padding: 5px;
+            text-decoration: none;
+        }
+
+        .promo__contacto {
+            width: 25%;
+        }
+
+        .promo__contacto i {
+            font-size: 45px;
+            padding: 5px;
+        }
+
+        .promo__contacto h2 {
+            font-size: 11px;
+            padding: 10px;
+        }
+
+        .footer1 p {
+            font-size: 12px;
+            padding: 5px;
+        }
+
+    }
 
-    .promo__contacto h2 {
-        font-size: 11px;
-        padding: 10px;
-    }
 
-    .footer1 p {
-        font-size: 12px;
-        padding: 5px;
-    }
+    @media screen and (max-width: 576px) {
+        .contenedor {
 
-}
-
-
-@media screen and (max-width: 576px) {
-    .contenedor {
-
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(28, auto);
-        grid-template-areas:
-            "carrusel  "
-            "redes--uno "
-            "redes--dos "
-            "section "
-            "section2  "
-            "article "
-            "article2  "
-            "contacto "
-        
-        
-    }
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(28, auto);
+            grid-template-areas:
+                "carrusel  "
+                "redes--uno "
+                "redes--dos "
+                "section "
+                "section2  "
+                "article "
+                "article2  "
+                "contacto ";
+        }
 
 
-    .logo {
-        width: 160px;
-        height: 50px;
-    }
+        .logo {
+            width: 160px;
+            height: 50px;
+        }
 
-    .linkCompra {
-        margin-left: 35%;
-        font-size: 12px;
-        text-shadow: none;
+        .linkCompra {
+            margin-left: 35%;
+            font-size: 12px;
+            text-shadow: none;
 
-    }
+        }
 
-    .mySlides img {
+        .mySlides img {
 
-        height: 250px;
-        box-sizing: border-box;
-        background-position: center;
-        z-index: -1;
-        border-radius: 0 0 30% 0;
-    }
+            height: 250px;
+            box-sizing: border-box;
+            background-position: center;
+            z-index: -1;
+            border-radius: 0 0 30% 0;
+        }
 
-    .mySlides .text {
-        width: 40%;
-        margin-right: 7px;
-        font-size: 20px;
-        padding: 10px;
-    }
+        .mySlides .text {
+            width: 40%;
+            margin-right: 7px;
+            font-size: 20px;
+            padding: 10px;
+        }
 
-    .text h4 {
-        font-size: 11px;
-    }
+        .text h4 {
+            font-size: 11px;
+        }
 
-    .redes--uno h4 {
-        font-size: 19px;
-        color: #003d50;
-    }
+        .redes--uno h4 {
+            font-size: 19px;
+            color: #003d50;
+        }
 
-    .redes--uno p {
-        font-size: 12px;
-        font-weight: bolder;
-    }
+        .redes--uno p {
+            font-size: 12px;
+            font-weight: bolder;
+        }
 
-    .redes--dos i {
-        font-size: 50px;
-    }
+        .redes--dos i {
+            font-size: 50px;
+        }
 
-    .form__titulo {
-        font-size: 20px;
+        .form__titulo {
+            font-size: 20px;
 
-    }
+        }
 
-    .section {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-    }
+        .section {
+            width: 100%;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+        }
 
-    .box--productos {
-        width: 70%;
-        margin-top: 10px;
-    }
+        .box--productos {
+            width: 70%;
+            margin-top: 10px;
+        }
 
-    .middle {
+        .middle {
 
-        opacity: 1;
-        position: static;
-        top: 0;
-        width: 100%;
-        left: 0;
+            opacity: 1;
+            position: static;
+            top: 0;
+            width: 100%;
+            left: 0;
 
 
-    }
+        }
 
-    .box--productos:hover .middle {
-        display: none;
-    }
+        .box--productos:hover .middle {
+            display: none;
+        }
 
-    .middle .text {
+        .middle .text {
 
-        font-size: 15px;
-        color: white;
+            font-size: 15px;
+            color: white;
 
-    }
+        }
 
-    .box__accordion {
-        width: 100%;
-        height: 400px;
-    }
+        .box__accordion {
+            width: 100%;
+            height: 400px;
+        }
 
-    .contacto-form {
-        width: 100%;
-        margin-bottom: 10px;
+        .contacto-form {
+            width: 100%;
+            margin-bottom: 10px;
 
-    }
+        }
 
-    .contenedor .article {
+        .contenedor .article {
 
-        grid-area: article;
-        width: 100%;
-        margin-right: 0px;
-        display: flex;
-        flex-direction: column;
-        padding: 0px;
-        align-content: center;
+            grid-area: article;
+            width: 100%;
+            margin-right: 0px;
+            display: flex;
+            flex-direction: column;
+            padding: 0px;
+            align-content: center;
 
-    }
+        }
 
-    .contenedor .article2 {
-        grid-area: article2;
-        margin-right: 0;
-    }
+        .contenedor .article2 {
+            grid-area: article2;
+            margin-right: 0;
+        }
 
-    .box__video {
-        width: 99%;
-    }
+        .box__video {
+            width: 99%;
+        }
 
-    .box__video i {
-        font-size: 50px;
-    }
+        .box__video i {
+            font-size: 50px;
+        }
 
-    .box__video h4 {
-        font-size: 30px;
-    }
+        .box__video h4 {
+            font-size: 30px;
+        }
 
-    .box__video p {
-        font-size: 16px;
-        text-align: justify;
-    }
+        .box__video p {
+            font-size: 16px;
+            text-align: justify;
+        }
 
-    .contacto--mapa {
+        .contacto--mapa {
 
-        padding-top: 10px;
-    }
+            padding-top: 10px;
+        }
 
-    #promo {
-        align-items: center;
+        #promo {
+            align-items: center;
 
-    }
+        }
 
-    .promo__img {
-        width: 22%;
-        padding: 0;
+        .promo__img {
+            width: 22%;
+            padding: 0;
 
-    }
+        }
 
-    .promo__img img {
-        width: 60px;
-    }
+        .promo__img img {
+            width: 60px;
+        }
 
-    .promo__text {
-        width: 45%;
-    }
+        .promo__text {
+            width: 45%;
+        }
 
-    .promo__text p {
-        padding: 10px;
-        font-size: 10px;
-        line-height: 1.5;
-        font-weight: 100;
+        .promo__text p {
+            padding: 10px;
+            font-size: 10px;
+            line-height: 1.5;
+            font-weight: 100;
 
 
-    }
+        }
 
-    .promo__redes {
-        width: 10%;
-    }
+        .promo__redes {
+            width: 10%;
+        }
 
-    .promo__redes i {
-        color: #e97305;
-        font-size: 20px;
-        padding: 5px;
-        text-decoration: none;
-    }
+        .promo__redes i {
+            color: #e97305;
+            font-size: 20px;
+            padding: 5px;
+            text-decoration: none;
+        }
 
-    .promo__contacto {
-        width: 20%;
-    }
+        .promo__contacto {
+            width: 20%;
+        }
 
-    .promo__contacto i {
-        font-size: 40px;
-        padding: 5px;
-    }
+        .promo__contacto i {
+            font-size: 40px;
+            padding: 5px;
+        }
 
-    .promo__contacto h2 {
-        font-size: 11px;
-        padding: 10px;
-    }
+        .promo__contacto h2 {
+            font-size: 11px;
+            padding: 10px;
+        }
 
-    .footer1 {
-        width: 100%;
-        padding: 5px 0;
-        border-top: 1px solid #e97305;
-        text-align: center;
+        .footer1 {
+            width: 100%;
+            padding: 5px 0;
+            border-top: 1px solid #e97305;
+            text-align: center;
 
-    }
+        }
 
-    .footer1 p {
-        font-size: 12px;
-        padding: 5px;
+        .footer1 p {
+            font-size: 12px;
+            padding: 5px;
+        }
     }
-
 }
