--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -95,6 +95,7 @@ body {
     margin-bottom: 7px;
     font-size: 24px;
     font-weight: bolder;
+    text-transform: uppercase;
     color: #003d50;
     text-align: center;
 }
