--- a/scss/_sucursales.scss
+++ b/scss/_sucursales.scss
@@ -12,7 +12,7 @@
     width: $size;
     border: 1px solid rgba(153, 153, 153, 0.288);
     margin: 0 auto;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
     background-color: #e97305;
     
 
@@ -39,9 +39,10 @@
     padding-top: 10px;
     grid-row: 1/2;
     grid-column: 1/4;
+    height: 600px;
     display: flex;
     flex-wrap: wrap;
-    background: linear-gradient(45deg, rgba(0,212,255,0.7455357142857143) 2%, rgba(0,61,80,1) 100%);
+    background: linear-gradient(45deg, rgba(130, 134, 134, 0.445) 10%, rgb(176, 186, 189) 90%);
   
 }
 
@@ -59,6 +60,7 @@ width: 100%;
 display: flex;
 flex-wrap: wrap;
 text-align: center;
+
 
 .caja {
     @include caja(19%);
