--- a/scss/_sucursales.scss
+++ b/scss/_sucursales.scss
@@ -8,7 +8,7 @@
 }
 
 
-@mixin caja ($size) {
+@mixin caja ($size, $icon, $text) {
     width: $size;
     border: 1px solid rgba(153, 153, 153, 0.288);
     margin: 0 auto;
@@ -17,7 +17,7 @@
     
 
     i {
-        font-size: 50px;
+        font-size: $icon;
         color: #003d50;
         padding: 7px;
 
@@ -27,7 +27,7 @@
     }
 
     h4 {
-        font-size: 22px;
+        font-size: $text;
         color: #003d50;
         padding: 7px;
     
@@ -37,22 +37,43 @@
 
 .content--sucursales{
     padding-top: 10px;
-    grid-row: 1/2;
+    grid-row: 1/3;
     grid-column: 1/4;
-    height: 600px;
+    height: 500px;
     display: flex;
+    
     flex-wrap: wrap;
+    align-items: center;
     background: linear-gradient(45deg, rgba(130, 134, 134, 0.445) 10%, rgb(176, 186, 189) 90%);
+   
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }
   
 }
 
 .sucursales__titulo {
     @include titulo(45px);
     width:40%;   
+
+    @media screen and (max-width: 768px) {
+        @include titulo(35px);
+        width:80%;  
+    }
+
+    @media screen and (max-width: 576px) {
+        @include titulo(28px);
+    }
 }
 
 .video{
-    width: 60%;
+    width: 58%;
+
+    @media screen and (max-width: 768px) {
+        width: 95%; 
+        padding: 10px;
+    }
+
 }
 
 .box--sucursales{
@@ -60,10 +81,16 @@ width: 100%;
 display: flex;
 flex-wrap: wrap;
 text-align: center;
+grid-gap: 10px;
 
 
 .caja {
-    @include caja(19%);
+    @include caja(15%, 50px, 18px);
+
+    @media screen and (max-width: 768px) {
+        @include caja(29%, 30px, 11px);
+    }
+
    }
    
 }
