--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -538,8 +538,8 @@
 .content--sucursales {
   padding-top: 10px;
   -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
@@ -549,7 +549,19 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: linear-gradient(45deg, rgba(130, 134, 134, 0.445) 10%, #b0babd 90%);
+}
+
+@media screen and (max-width: 768px) {
+  .content--sucursales {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .sucursales__titulo {
@@ -561,8 +573,36 @@
   width: 40%;
 }
 
+@media screen and (max-width: 768px) {
+  .sucursales__titulo {
+    font-size: 35px;
+    font-weight: bolder;
+    color: #003d50;
+    text-align: center;
+    text-transform: uppercase;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .sucursales__titulo {
+    font-size: 28px;
+    font-weight: bolder;
+    color: #003d50;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
 .video {
-  width: 60%;
+  width: 58%;
+}
+
+@media screen and (max-width: 768px) {
+  .video {
+    width: 95%;
+    padding: 10px;
+  }
 }
 
 .box--sucursales {
@@ -573,10 +613,11 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   text-align: center;
+  grid-gap: 10px;
 }
 
 .box--sucursales .caja {
-  width: 19%;
+  width: 15%;
   border: 1px solid rgba(153, 153, 153, 0.288);
   margin: 0 auto;
   -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
@@ -595,9 +636,33 @@
 }
 
 .box--sucursales .caja h4 {
-  font-size: 22px;
+  font-size: 18px;
   color: #003d50;
   padding: 7px;
+}
+
+@media screen and (max-width: 768px) {
+  .box--sucursales .caja {
+    width: 29%;
+    border: 1px solid rgba(153, 153, 153, 0.288);
+    margin: 0 auto;
+    -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
+            box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
+    background-color: #e97305;
+  }
+  .box--sucursales .caja i {
+    font-size: 30px;
+    color: #003d50;
+    padding: 7px;
+  }
+  .box--sucursales .caja i:hover {
+    color: #fff;
+  }
+  .box--sucursales .caja h4 {
+    font-size: 11px;
+    color: #003d50;
+    padding: 7px;
+  }
 }
 
 * {
