--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -6,7 +6,7 @@ $color4: white;
 	background: linear-gradient(45deg, rgba(0,212,255,0.7455357142857143) 2%, rgba(0,61,80,1) 100%);
 	height: 90px;
 	width: 100%;
-	position: fixed;
+	/* position: fixed; */
 	z-index:2;	
 }
 
@@ -144,3 +144,19 @@ $color4: white;
         display: none;
     }
 }
+
+.affix {
+    top: 0;
+    width: 100%;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+	position: fixed;
+  }
+  .affix-top {
+    position: static;
+    top: -35px;
+  }
+  .affix + .container-fluid {
+    padding-top: 70px;
+  }
+
