--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -13,8 +13,6 @@
     justify-content: center;
     margin: 10px auto;
     width: 100%;
-    
-
 
     .form {
 
@@ -61,16 +59,11 @@
         margin-bottom: 10px;
 
         &:hover {
-
             outline: none;
-            background: linear-gradient(45deg, rgba(0,212,255,0.7455357142857143) 2%, rgba(0,61,80,1) 100%);
+            background: linear-gradient(45deg, rgba(0, 212, 255, 0.7455357142857143) 2%, rgba(0, 61, 80, 1) 100%);
             color: #fff;
         }
-
     }
-
-
-
 }
 
 .contacto--mapa {
@@ -84,27 +77,26 @@
     margin: 0 auto;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
     text-align: center;
-}
 
-.box__mapa:hover i {
-    color: #777;
-}
+    i {
+        font-size: 24px;
+        color: #003d50;
+        padding: 5px;
 
-.box__mapa i {
-    font-size: 24px;
-    color: #003d50;
-    padding: 5px;
-}
+        &:hover {
+            color: #777;
+        }
+    }
 
-.box__mapa h4 {
-    font-size: 18px;
-    color: #003d50;
-    padding: 3px;
+    h4 {
+        font-size: 18px;
+        color: #003d50;
+        padding: 3px;
 
-}
+    }
 
-.box__mapa p {
-    font-size: 12px;
-    padding: 7px;
-
+    p {
+        font-size: 12px;
+        padding: 7px;
+    }
 }
